--- a/question_app/templates/answer.html
+++ b/question_app/templates/answer.html
@@ -3,7 +3,7 @@
 {% block left_content %}
 <h1>提问</h1>
 <br>
-<form method="POST" role="form">
+<form method="post" role="form">
     <div class="form-group">
         <label for="InputQuestion">你的问题:</label>
         <textarea class="form-control" rows="3" name="content"></textarea>
