--- a/question_app/templates/answer.html
+++ b/question_app/templates/answer.html
@@ -11,7 +11,7 @@
     <div class="form-group">
         <label for="SearchTag">标签:</label>
         <div class="input-group">
-            <input type="text" class="form-control" placeholder="搜索标签" name="tags">
+            <input type="text" class="form-control" placeholder="输入标签,以','分隔" name="tags">
             <span class="input-group-btn">
                 <button class="btn btn-default" type="button">Go!</button>
             </span>
