--- a/question_app/templates/layout.html
+++ b/question_app/templates/layout.html
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a href="#">问题</a>
+                            <a href="{{url_for('main.index')}}">问题</a>
                         </li>
                         <li>
                             <a href="#">用户</a>
@@ -78,7 +78,7 @@
                 <div class="col-md-1"></div>
                 <div class="col-md-7">
                     <div class="left-content">
-                        <div class="content-nav">
+                        <!--<div class="content-nav">
                             <ul class="nav navbar-nav">
                                 <li>
                                     <a href="#">问题</a>
@@ -93,7 +93,7 @@
                                     <a href="#">提问</a>
                                 </li>
                             </ul>
-                        </div>
+                        </div>-->
                         <div class="layout-left">
                         {% block left_content %}
                         
