--- a/question_app/static/stylesheets/style.css
+++ b/question_app/static/stylesheets/style.css
@@ -10,73 +10,86 @@ header nav.navbar {
 
 /* line 10, ../sass/style.scss */
 .layout-left {
-  margin: 10px 15px 10px 15px;
+  margin: 30px 15px 10px 15px;
+  min-height: 800px;
+  padding-top: 40px;
 }
 
-/* line 14, ../sass/style.scss */
+/* line 16, ../sass/style.scss */
 .left-content {
   background-color: white;
 }
-/* line 17, ../sass/style.scss */
+/* line 19, ../sass/style.scss */
 .left-content .content-nav {
   margin-top: 40px;
   height: 40px;
   width: 100%;
   background-color: #e5e5e5;
 }
-/* line 23, ../sass/style.scss */
+/* line 25, ../sass/style.scss */
 .left-content .content-nav .navbar-nav li a {
   line-height: 40px;
   padding: 0px 15px;
   color: #000;
 }
-/* line 29, ../sass/style.scss */
+/* line 31, ../sass/style.scss */
 .left-content .content-nav .navbar-nav li a:hover {
   border-bottom: 1px solid red;
   background-color: #e5e5e5;
 }
 
-/* line 37, ../sass/style.scss */
+/* line 39, ../sass/style.scss */
 a {
   text-decoration: none;
   color: black;
 }
 
-/* line 42, ../sass/style.scss */
+/* line 44, ../sass/style.scss */
 .body {
   font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
   background-color: #F0F0F0;
 }
-/* line 46, ../sass/style.scss */
+/* line 48, ../sass/style.scss */
 .body .questions {
-  margin: 40px 5px;
-  padding: 20px 20px;
+  margin: 0px 5px 40px 5px;
+  padding: 0px 20px;
 }
-/* line 49, ../sass/style.scss */
+/* line 51, ../sass/style.scss */
 .body .questions .question {
   border-bottom: 1px solid #eee;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
-/* line 52, ../sass/style.scss */
+/* line 55, ../sass/style.scss */
+.body .questions .question .left-img img {
+  border-radius: 5px;
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+}
+/* line 62, ../sass/style.scss */
+.body .questions .question .right-content h2 {
+  font-size: 16px;
+}
+/* line 66, ../sass/style.scss */
 .body .questions .question .title {
   margin: 10px 0;
 }
-/* line 61, ../sass/style.scss */
+/* line 75, ../sass/style.scss */
 .body .questions .question .author {
   font-size: 14px;
   color: #999;
 }
-/* line 66, ../sass/style.scss */
+/* line 80, ../sass/style.scss */
 .body .questions .question .created_time {
   font-size: 14px;
   color: #999;
   float: right;
 }
-/* line 72, ../sass/style.scss */
+/* line 86, ../sass/style.scss */
 .body .questions .question .tags {
   margin: 2px 0;
 }
-/* line 74, ../sass/style.scss */
+/* line 88, ../sass/style.scss */
 .body .questions .question .tags .tag {
   color: #39739d;
   background-color: #E1ECF4;
@@ -84,19 +97,42 @@ a {
   padding: 2px 5px;
   font-size: 13px;
 }
-/* line 82, ../sass/style.scss */
+/* line 96, ../sass/style.scss */
 .body .questions .question .tags .tag:hover {
   background-color: #259;
   color: white;
 }
-/* line 88, ../sass/style.scss */
+/* line 102, ../sass/style.scss */
 .body .questions .question .tags .question-info {
   font-size: 13px;
   margin-left: 10px;
   text-decoration: none;
 }
 
-/* line 98, ../sass/style.scss */
+/* line 113, ../sass/style.scss */
+.all-tags {
+  padding: 20px;
+}
+/* line 116, ../sass/style.scss */
+.all-tags .tags {
+  margin: 2px 0;
+}
+/* line 118, ../sass/style.scss */
+.all-tags .tags .tag {
+  color: #39739d;
+  background-color: #E1ECF4;
+  border-radius: 30px;
+  padding: 2px 10px;
+  margin-left: 10px;
+  font-size: 13px;
+}
+/* line 127, ../sass/style.scss */
+.all-tags .tags .tag:hover {
+  background-color: #259;
+  color: white;
+}
+
+/* line 135, ../sass/style.scss */
 .panel {
   border: 1px solid #ddd;
   border-radius: 2%;
@@ -107,21 +143,74 @@ a {
   margin-right: 20px;
 }
 
-/* line 109, ../sass/style.scss */
+/* line 146, ../sass/style.scss */
 .user-infos {
   margin-left: 20px;
 }
 
-/* line 113, ../sass/style.scss */
+/* line 150, ../sass/style.scss */
 #user-avatar {
   margin-top: 20px;
   text-align: center;
 }
-/* line 117, ../sass/style.scss */
+/* line 154, ../sass/style.scss */
 #user-avatar img {
   border-radius: 5px;
   margin: 10px;
   width: 73px;
   height: 73px;
   border: 2px solid #999;
+}
+
+/* line 167, ../sass/style.scss */
+.question-detail {
+  padding: 20px;
+}
+/* line 170, ../sass/style.scss */
+.question-detail .content {
+  margin: 20px;
+}
+/* line 173, ../sass/style.scss */
+.question-detail .tags {
+  margin: 2px 0;
+}
+/* line 175, ../sass/style.scss */
+.question-detail .tags .tag {
+  color: #39739d;
+  background-color: #E1ECF4;
+  border-radius: 30px;
+  padding: 2px 5px;
+  font-size: 13px;
+}
+/* line 183, ../sass/style.scss */
+.question-detail .tags .tag:hover {
+  background-color: #259;
+  color: white;
+}
+/* line 190, ../sass/style.scss */
+.question-detail img {
+  border-radius: 5px;
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+}
+
+/* line 199, ../sass/style.scss */
+.ask-page {
+  padding: 20px;
+}
+
+/* line 203, ../sass/style.scss */
+.user-info-tab {
+  margin-top: 50px;
+}
+/* line 206, ../sass/style.scss */
+.user-info-tab #my_questions ul li {
+  margin-top: 10px;
+  list-style: none;
+}
+/* line 211, ../sass/style.scss */
+.user-info-tab #my_answers ul li {
+  margin-top: 10px;
+  list-style: none;
 }
