--- a/question_app/templates/answer.html
+++ b/question_app/templates/answer.html
@@ -6,7 +6,11 @@
 <form method="post" role="form">
     <div class="form-group">
         <label for="InputQuestion">你的问题:</label>
-        <textarea class="form-control" rows="3" name="content"></textarea>
+        <input type="text" class="form-control" name="title" placeholder="标题">
+    </div>
+    <div class="form-group">
+        <label for="detail">详细描述（可选）</label>
+        <textarea name="content" class="form-control" id="" cols="30" rows="10"></textarea>
     </div>
     <div class="form-group">
         <label for="SearchTag">标签:</label>
