--- a/question_app/templates/ask.html
+++ b/question_app/templates/ask.html
@@ -1,1 +1,29 @@
 {% extends "layout.html" %}
+
+{% block left_content %}
+<div class="ask-page">
+<h1>提问</h1>
+<br>
+<form method="post" role="form">
+    <div class="form-group">
+        <label for="InputQuestion">你的问题:</label>
+        <input type="text" class="form-control" name="title" placeholder="标题">
+    </div>
+    <div class="form-group">
+        <label for="detail">详细描述（可选）</label>
+        <textarea name="content" class="form-control" id="" cols="30" rows="10"></textarea>
+    </div>
+    <div class="form-group">
+        <label for="SearchTag">标签:</label>
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="输入标签,以','分隔" name="tags">
+            <span class="input-group-btn">
+                <button class="btn btn-default" type="button">Go!</button>
+            </span>
+        </div>
+    </div>
+    <input class="btn btn-default" type="submit" value="发布">
+</form>
+</div>
+{% endblock %}
+
